0004: Add SEO and performance meta tags to index.html; create site.webmanifest for PWA support; update hero image format

--- a/index.html
+++ b/index.html
@@ -3,7 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Locale and Language -->
+    <meta property="og:locale" content="en_US" />
+    <link
+      rel="alternate"
+      href="https://dance-cloud-web.vercel.app"
+      hreflang="x-default"
+    />
+
+    <!-- SEO -->
+    <meta name="description" content="Connect with dancers worldwide" />
+    <meta name="keywords" content="dance, community, social network, dancers" />
+    <meta name="author" content="DanceCloud" />
+    <link rel="canonical" href="https://dance-cloud-web.vercel.app" />
+
+    <!-- Theme -->
+    <meta name="color-scheme" content="dark" />
+    <meta
+      name="theme-color"
+      content="#000000"
+      media="(prefers-color-scheme: dark)"
+    />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://dance-cloud-web.vercel.app" />
+    <link rel="dns-prefetch" href="https://dance-cloud-web.vercel.app" />
+
+    <!-- Primary Meta Tags -->
+    <meta property="og:title" content="DanceCloud" />
+    <meta property="og:description" content="Connect with dancers worldwide" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dance-cloud-web.vercel.app" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:site_name" content="DanceCloud" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="DanceCloud - Connect with dancers worldwide"
+    />
+
+    <!-- Twitter Card tags for Twitter sharing -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DanceCloud" />
+    <meta name="twitter:description" content="Connect with dancers worldwide" />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:site" content="@dancecloud" />
+    <meta name="twitter:creator" content="@dancecloud" />
+
+    <!-- Open Graph / Facebook -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>DanceCloud</title>
+
     <!-- Preload Landing Section Font -->
     <link
       rel="preload"
