0006: Fix browser tinting color

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <link rel="canonical" href="https://dance-cloud-web.vercel.app" />
 
     <!-- Theme -->
-    <meta name="color-scheme" content="dark" />
-    <meta
-      name="theme-color"
-      content="#000000"
-      media="(prefers-color-scheme: dark)"
-    />
+    <meta name="color-scheme" content="dark only" />
+    <meta name="theme-color" content="#0a0a0a" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#0a0a0a" />
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0a0a0a" />
 
     <!-- Performance -->
     <link rel="preconnect" href="https://dance-cloud-web.vercel.app" />
