Add store meta heads

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
     <meta name="twitter:site" content="@dancecloud" />
     <meta name="twitter:creator" content="@dancecloud" />
 
+    <meta name="apple-itunes-app" content="app-id=6474421119" />
+    <link
+      rel="alternate"
+      href="https://play.google.com/store/apps/details?id=smpath.dance.cloud"
+    />
+
     <!-- Open Graph / Facebook -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
