0012: Add classes fetching and ui layout

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <!-- Theme -->
     <meta name="color-scheme" content="dark only" />
-    <meta name="theme-color" content="#0a0a0a" />
+    <meta name="theme-color" content="#000000" />
     <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#0a0a0a" />
+    <meta name="msapplication-navbutton-color" content="#000000" />
     <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#0a0a0a" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
 
     <!-- Performance -->
     <link rel="preconnect" href="https://dance-cloud-web.vercel.app" />
